--- a/styles/basic.css
+++ b/styles/basic.css
@@ -1,20 +1,27 @@
-.nav-dark-bg{
+.nav-dark-bg {
     background-color: rgba(0, 0, 0, .4)
 }
 
-.container-slc
-{
+.container-slc {
     padding-left: 15%;
     padding-right: 15%;
 }
 
-.shadow-big{
+.shadow-big {}
 
+.slc-hover-background:hover {
+
+    background: #AD4C66 !important;
+    border-color: #AD4C66;
+}
+
+.dark-text-hover:hover{
+    color: black !important;
 }
 
 
+
 .link {
-    cursor: pointer;
     position: relative;
     white-space: nowrap;
     color: var(--color-text);
@@ -24,8 +31,8 @@
 .link::after {
     position: absolute;
     width: 100%;
-    height: 1px;
-    background: red;
+    height: 3px;
+    background: #AD4C66;
     top: 100%;
     left: 0;
     pointer-events: none;
@@ -50,4 +57,8 @@
 .link--metis:hover::before {
     transform-origin: 0% 50%;
     transform: scale3d(1, 1, 1);
+}
+
+.rounded-10{
+    border-radius:10px;
 }
