--- a/styles/basic.css
+++ b/styles/basic.css
@@ -158,29 +158,31 @@
 }
 
 .portraits-front{
+
+    
+    height: 300px !important;
+
     background-color: #87807C;
     transition: all .3s ease-in-out 0s;
 
 }
 
 .portraits-back{
+
+    height: 300px !important;
+
     background-color: #87807C;
     transition: all .3s ease-in-out 0s;
     color: white;
     justify-content: center;
-    align-content: center;
-    place-content: center;
     text-align: center;
     background-color: #AD4C66;
 }
 
 .portraits {
-    height: 300px;
     max-width: 236.87px !important;
-    box-shadow: 1px 3px 9px 0px rgba(0, 0, 0, 0.4);
 }
 
 .portraits-front:hover {
     background-color: #AD4C66;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
